...
            android:layout_height="match_parent"
            tools:listitem="@layout/academy_item"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreate"
        android:layout_width="@dimen/standard_35"
        android:layout_height="@dimen/standard_35"
        app:fabCustomSize="@dimen/standard_35"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="26dp"  />
...
        android:layout_height="@dimen/standard_35"
        app:fabCustomSize="@dimen/standard_35"
        android:src="@drawable/baseline_get_app_24"
        android:layout_gravity="bottom|end"
        android:layout_margin="26dp" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_more_vert_24"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp" />

...
