<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_edit_profile"
        android:icon="@drawable/baseline_face_24"
        app:showAsAction="always"
        android:title="Edytuj profil"
        />
</menu>