...
<!--                    android:enabled="false"-->
<!--                    android:text="ZATWIERDŹ" />-->
<!--            </LinearLayout>-->


            <TextView
                android:id="@+id/tv_edit_profile_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Imię" />

            <EditText
                android:id="@+id/et_edit_profile_firstname"
...
